Shape keys of the curves with multiple splines go haywire in edit mode #56404

Closed
opened 2018-08-15 12:34:35 +02:00 by Shrinivas · 5 comments
Member

System Information
Linux Mint 18.3

Blender Version
blender-2.79b

Short description of error
Shape keys of the curves with multiple splines go haywire in edit mode

Exact steps for others to reproduce the error
To quickly reproduce the error, open the attached blend file, switch to tab mode and click on the two shape keys in the properties panel alternately.

Here are the detailed steps:

  • add a bezier curve
  • selecting this curve go to edit mode
  • add another curve in edit mode
  • come out of the edit mode
  • add two shape keys to the curve with two splines
  • modify the shape of the curve for second shapekey
  • switch to object mode
  • select the second shapekey
  • switch to edit mode
  • click on the first shape key
  • click on the second shape key, check the shapes

Repeat the last two steps gives a different result every time.

multispline_shapekey_issue.blend

**System Information** Linux Mint 18.3 **Blender Version** blender-2.79b **Short description of error** Shape keys of the curves with multiple splines go haywire in edit mode **Exact steps for others to reproduce the error** To quickly reproduce the error, open the attached blend file, switch to tab mode and click on the two shape keys in the properties panel alternately. Here are the detailed steps: - add a bezier curve - selecting this curve go to edit mode - add another curve in edit mode - come out of the edit mode - add two shape keys to the curve with two splines - modify the shape of the curve for second shapekey - switch to object mode - select the second shapekey - switch to edit mode - click on the first shape key - click on the second shape key, check the shapes Repeat the last two steps gives a different result every time. [multispline_shapekey_issue.blend](https://archive.blender.org/developer/F4234433/multispline_shapekey_issue.blend)
Author
Member

Added subscriber: @Khemadeva

Added subscriber: @Khemadeva

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-08-16 11:04:57 +02:00

Confirmed, looks like differential changes get re-applied every time…

Confirmed, looks like differential changes get re-applied every time…

This issue was referenced by 7a7c579dd9

This issue was referenced by 7a7c579dd9367783de5f1ea1a2bba91572e3009a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56404
No description provided.