Fix T56404: Shape keys of the curves with multiple splines go haywire in edit mode.

Very dummy mistake (someone forgot to increment one of the variables in
one of the loops in that spaghetti nightmare that is nurbs shapekey
code), took half an age to spot it... :/